# ContextOS

./: .env.example  .gitignore  README.md  README_zh.md  plan.md  pyproject.toml
.metabot/: project.json
src/contextos/: __init__.py  cli.py  context_engine.py  fork_engine.py  models.py  proxy.py  server.py  session_store.py  token_profiler.py
tests/: test_context_engine.py  test_session_store.py  test_token_profiler.py
web/: index.html  package-lock.json  package.json  vite.config.ts
web/src/: App.tsx
web/src/api/: client.ts
web/src/pages/: ForkGraphPage.tsx  RequestLogsPage.tsx  SessionDetailPage.tsx  SessionListPage.tsx
