[project]
name = "contextos"
version = "0.1.0"
description = "Claude Context Operating System - Proxy-based Token observability, Context control, Session management"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "httpx>=0.27.0",
    "anthropic>=0.39.0",
    "aiosqlite>=0.20.0",
    "pydantic>=2.0",
    "python-dotenv>=1.0.0",
    "tiktoken>=0.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.7.0",
]

[project.scripts]
contextos = "contextos.cli:main"

[tool.ruff]
line-length = 100
